--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.33.1",
+    "@heroui/progress": "^2.2.22",
+    "@prisma/client": "^6.16.3",
+    "date-fns": "^4.1.0",
+    "next": "14.2.15",
+    "prisma": "^6.16.3",
     "react": "^18",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
