--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/nextjs": "^6.33.1",
     "@heroui/progress": "^2.2.22",
     "@prisma/client": "^6.16.3",
+    "@supabase/supabase-js": "^2.74.0",
+    "@uploadthing/react": "^7.3.3",
     "date-fns": "^4.1.0",
     "next": "14.2.15",
     "prisma": "^6.16.3",
@@ -20,6 +22,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "uploadthing": "^7.7.4",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
